--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,11 @@
 
 @layer components {
   .btn {
-    @apply active:translate-y-1 rounded-full bg-neutral-800 text-white p-2 w-24 hover:bg-blue-600 drop-shadow-md;
+    @apply active:translate-y-1 rounded-full bg-neutral-800 text-white p-2 w-24 m-1 hover:bg-blue-600 drop-shadow-md;
   }
+}
+* {
+  @apply transition-colors duration-200;
 }
 
 /* #root {
